<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_note_manager"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/my_note"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/title_text"
        app:layout_constraintStart_toStartOf="@+id/title_text"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <EditText
        android:id="@+id/input_note_field"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:lines="24"
        android:maxLines="24"
        android:minLines="6"
        android:scrollbars="vertical"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="@+id/subtitle_text"
        app:layout_constraintStart_toStartOf="@+id/subtitle_text"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_text"
        android:hint="@string/enter_your_note_here"
        tools:text="My first note 1\nMy second note 2\nMy second note 3\nMy second note 4"/>

    <Button
        android:id="@+id/save_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/input_note_field"
        app:layout_constraintEnd_toEndOf="@+id/input_note_field"
        app:layout_constraintTop_toBottomOf="@+id/input_note_field"
        android:text="@string/save_note"
        android:layout_marginTop="12dp"
        android:clickable="true"
        />

    <Button
        android:id="@+id/show_saved_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/save_note_btn"
        app:layout_constraintEnd_toEndOf="@+id/save_note_btn"
        app:layout_constraintTop_toBottomOf="@+id/save_note_btn"
        android:text="@string/show_saved_note"
        android:layout_marginTop="12dp"
        android:clickable="true"
        />

</androidx.constraintlayout.widget.ConstraintLayout>